fixed overflow in css

--- a/src/visual-studio-dark/theme.css
+++ b/src/visual-studio-dark/theme.css
@@ -85,7 +85,7 @@
 	right: 406px;
 	bottom: 71px;
 	border: none;
-	overflow: none;
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
 	background-color: rgb(30,30,30);
